@@ -4,22 +4,27 @@
  */
 package pl.edu.icm.unity.saml.idp.web;
 
+import com.vaadin.flow.server.startup.ServletContextListeners;
 import eu.unicore.samly2.SAMLConstants;
 import eu.unicore.samly2.webservice.SAMLLogoutInterface;
 import eu.unicore.util.configuration.ConfigurationException;
 import io.imunity.idp.LastIdPClinetAccessAttributeManagement;
+import io.imunity.vaadin.endpoint.common.Vaadin82XEndpoint;
 import org.apache.cxf.Bus;
 import org.apache.cxf.BusFactory;
 import org.apache.cxf.endpoint.Endpoint;
 import org.apache.cxf.transport.servlet.CXFNonSpringServlet;
+import org.apache.logging.log4j.Logger;
 import org.eclipse.jetty.servlet.FilterHolder;
 import org.eclipse.jetty.servlet.ServletContextHandler;
 import org.eclipse.jetty.servlet.ServletHolder;
+import org.eclipse.jetty.webapp.WebAppContext;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Primary;
 import pl.edu.icm.unity.MessageSource;
+import pl.edu.icm.unity.base.utils.Log;
 import pl.edu.icm.unity.engine.api.PKIManagement;
 import pl.edu.icm.unity.engine.api.attributes.AttributeTypeSupport;
 import pl.edu.icm.unity.engine.api.authn.RememberMeProcessor;
@@ -31,8 +36,11 @@ import pl.edu.icm.unity.engine.api.session.LoginToHttpSessionBinder;
 import pl.edu.icm.unity.engine.api.session.SessionManagement;
 import pl.edu.icm.unity.engine.api.utils.*;
 import pl.edu.icm.unity.exceptions.EngineException;
-import pl.edu.icm.unity.saml.idp.*;
+import pl.edu.icm.unity.saml.idp.IdpSamlTrustProvider;
+import pl.edu.icm.unity.saml.idp.SAMLIdPConfiguration;
+import pl.edu.icm.unity.saml.idp.SAMLIdPConfigurationParser;
 import pl.edu.icm.unity.saml.idp.SamlIdpStatisticReporter.SamlIdpStatisticReporterFactory;
+import pl.edu.icm.unity.saml.idp.TrustedServiceProviders;
 import pl.edu.icm.unity.saml.idp.web.filter.ErrorHandler;
 import pl.edu.icm.unity.saml.idp.web.filter.IdpConsentDeciderServletFactory;
 import pl.edu.icm.unity.saml.idp.web.filter.SamlGuardFilter;
@@ -41,15 +49,14 @@ import pl.edu.icm.unity.saml.idp.ws.SAMLSingleLogoutImpl;
 import pl.edu.icm.unity.saml.metadata.MetadataProvider;
 import pl.edu.icm.unity.saml.metadata.MetadataProviderFactory;
 import pl.edu.icm.unity.saml.metadata.MetadataServlet;
-import pl.edu.icm.unity.saml.metadata.cfg.MetaToIDPConfigConverter;
 import pl.edu.icm.unity.saml.metadata.cfg.IdpRemoteMetaManager;
+import pl.edu.icm.unity.saml.metadata.cfg.MetaToIDPConfigConverter;
 import pl.edu.icm.unity.saml.metadata.srv.RemoteMetadataService;
 import pl.edu.icm.unity.saml.slo.SAMLLogoutProcessor;
 import pl.edu.icm.unity.saml.slo.SAMLLogoutProcessor.SamlTrustProvider;
 import pl.edu.icm.unity.saml.slo.SAMLLogoutProcessorFactory;
 import pl.edu.icm.unity.saml.slo.SLOReplyInstaller;
 import pl.edu.icm.unity.saml.slo.SLOSAMLServlet;
-import pl.edu.icm.unity.saml.idp.TrustedServiceProviders;
 import pl.edu.icm.unity.types.endpoint.ResolvedEndpoint;
 import pl.edu.icm.unity.webui.EndpointRegistrationConfiguration;
 import pl.edu.icm.unity.webui.UnityVaadinServlet;
@@ -64,9 +71,8 @@ import xmlbeans.org.oasis.saml2.metadata.EndpointType;
 import javax.servlet.DispatcherType;
 import javax.servlet.Filter;
 import javax.servlet.Servlet;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
+import java.util.List;
 
 /**
  * Extends a simple {@link VaadinEndpoint} with configuration of SAML authn filter. Also SAML configuration
@@ -76,8 +82,10 @@ import java.util.EnumSet;
  */
 @PrototypeComponent
 @Primary
-public class SamlAuthVaadinEndpoint extends VaadinEndpoint
+public class SamlAuthVaadinEndpoint extends Vaadin82XEndpoint
 {
+	private static final Logger log = Log.getLogger(Log.U_SERVER_WEB, SamlAuthVaadinEndpoint.class);
+
 	public static final String SAML_ENTRY_SERVLET_PATH = "/saml2idp-web-entry";
 	public static final String SAML_CONSUMER_SERVLET_PATH = "/saml2idp-web";
 	public static final String SAML_UI_SERVLET_PATH = "/saml2idp-web-ui";
@@ -85,7 +93,8 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 	public static final String SAML_META_SERVLET_PATH = "/metadata";
 	public static final String SAML_SLO_ASYNC_SERVLET_PATH = "/SLO-WEB";
 	public static final String SAML_SLO_SOAP_SERVLET_PATH = "/SLO-SOAP";
-	
+
+
 	protected String publicEntryPointPath;
 	protected SAMLIdPConfiguration samlConfiguration;
 	protected FreemarkerAppHandler freemarkerHandler;
@@ -93,18 +102,18 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 	protected ExecutorsService executorsService;
 	protected IdpRemoteMetaManager myMetadataManager;
 	protected IdpConsentDeciderServletFactory dispatcherServletFactory;
-	private SAMLLogoutProcessorFactory logoutProcessorFactory;
-	private SLOReplyInstaller sloReplyInstaller;
-	private MessageSource msg;
-	protected AttributeTypeSupport aTypeSupport;
-	private RemoteMetadataService metadataService;
-	private URIAccessService uriAccessService;
-
-	protected SAMLIdPConfigurationParser samlIdPConfigurationParser;
+	private final SAMLLogoutProcessorFactory logoutProcessorFactory;
+	private final SLOReplyInstaller sloReplyInstaller;
+	private final RemoteMetadataService metadataService;
 	private final SamlIdpStatisticReporterFactory idpStatisticReporterFactory;
 
-	protected final LastIdPClinetAccessAttributeManagement lastAccessAttributeManagement;
-	
+	private final LastIdPClinetAccessAttributeManagement lastAccessAttributeManagement;
+	private final URIAccessService uriAccessService;
+	private final MessageSource msg;
+	private final AttributeTypeSupport aTypeSupport;
+	private final SAMLIdPConfigurationParser samlIdPConfigurationParser;
+
+
 	@Autowired
 	public SamlAuthVaadinEndpoint(NetworkServer server,
 	                              ApplicationContext applicationContext,
@@ -125,7 +134,7 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 	                              SAMLIdPConfigurationParser samlIdPConfigurationParser)
 	{
 		this(SAML_CONSUMER_SERVLET_PATH, server, advertisedAddrProvider, applicationContext, freemarkerHandler,
-				SamlIdPWebUI.class, pkiManagement, executorsService, dispatcherServletFactory, logoutProcessorFactory,
+				pkiManagement, executorsService, dispatcherServletFactory, logoutProcessorFactory,
 				sloReplyInstaller, msg, aTypeSupport, metadataService, uriAccessService,
 				remoteAuthnResponseProcessingFilter, idpStatisticReporterFactory, lastAccessAttributeManagement, samlIdPConfigurationParser);
 	}
@@ -135,7 +144,6 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 			AdvertisedAddressProvider advertisedAddrProvider,
 			ApplicationContext applicationContext,
 			FreemarkerAppHandler freemarkerHandler,
-			Class<?> uiClass,
 			PKIManagement pkiManagement,
 			ExecutorsService executorsService,
 			IdpConsentDeciderServletFactory dispatcherServletFactory,
@@ -150,8 +158,8 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 			LastIdPClinetAccessAttributeManagement lastAccessAttributeManagement,
 			SAMLIdPConfigurationParser samlIdPConfigurationParser)
 	{
-		super(server, advertisedAddrProvider, msg, applicationContext, uiClass.getSimpleName(), SAML_UI_SERVLET_PATH,
-				remoteAuthnResponseProcessingFilter);
+		super(server, advertisedAddrProvider, msg, applicationContext, new SamlResourceProvider(), SAML_UI_SERVLET_PATH,
+				remoteAuthnResponseProcessingFilter, SimpleVaadin2XServlet.class);
 		this.publicEntryPointPath = publicEntryServletPath;
 		this.freemarkerHandler = freemarkerHandler;
 		this.dispatcherServletFactory = dispatcherServletFactory;
@@ -204,9 +212,24 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 	}
 	
 	@Override
-	protected ServletContextHandler getServletContextHandlerOverridable()
-	{	
-		ServletContextHandler context = new ServletContextHandler(ServletContextHandler.SESSIONS);
+	protected ServletContextHandler getServletContextHandlerOverridable(WebAppContext webAppContext)
+	{
+		if (context != null)
+			return context;
+
+		ServletContextHandler context;
+		try
+		{
+			context = getWebAppContext(webAppContext, uiServletPath,
+					resourceProvider.getChosenClassPathElement(),
+					getWebContentsDir(),
+					new ServletContextListeners()
+			);
+		} catch (Exception e)
+		{
+			log.error(e);
+			return this.context;
+		}
 		context.setContextPath(description.getEndpoint().getContextAddress());
 
 		String samlPublicEntryPointUrl = getServletUrl(publicEntryPointPath);
@@ -247,11 +270,10 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 		RememberMeProcessor remeberMeProcessor = applicationContext.getBean(RememberMeProcessor.class);
 		
 		context.addFilter(new FilterHolder(new HiddenResourcesFilter(
-				Collections.unmodifiableList(Arrays.asList(AUTHENTICATION_PATH, 
-						SAML_CONSENT_DECIDER_SERVLET_PATH, SAML_UI_SERVLET_PATH)))), 
+						List.of(AUTHENTICATION_PATH, SAML_CONSENT_DECIDER_SERVLET_PATH))),
 				"/*", EnumSet.of(DispatcherType.REQUEST));
 		authnFilter = new AuthenticationFilter(
-				Arrays.asList(SAML_ENTRY_SERVLET_PATH), 
+				List.of(SAML_ENTRY_SERVLET_PATH),
 				AUTHENTICATION_PATH, description.getRealm(), sessionMan, sessionBinder, remeberMeProcessor);
 		context.addFilter(new FilterHolder(authnFilter), "/*", 
 				EnumSet.of(DispatcherType.REQUEST, DispatcherType.FORWARD));
@@ -278,15 +300,12 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 				lastAccessAttributeManagement, description.getEndpoint());
 		authenticationServlet.setCancelHandler(cancelHandler);
 		
-		ServletHolder authnServletHolder = createVaadinServletHolder(authenticationServlet, true);
+		ServletHolder authnServletHolder = createVaadin8ServletHolder(authenticationServlet);
 		context.addServlet(authnServletHolder, AUTHENTICATION_PATH+"/*");
-		context.addServlet(authnServletHolder, VAADIN_RESOURCES);
-		
-		theServlet = new UnityVaadinServlet(applicationContext, uiBeanName,
-				description, authenticationFlows, registrationConfiguration, properties, 
-				getBootstrapHandler(SAML_ENTRY_SERVLET_PATH));
-		context.addServlet(createVaadinServletHolder(theServlet, false), uiServletPath + "/*");
-		
+		context.addServlet(authnServletHolder, "/VAADIN/vaadinBootstrap.js*");
+		context.addServlet(authnServletHolder, "/VAADIN/widgetsets/*");
+		context.addServlet(authnServletHolder, "/VAADIN/themes/*");
+
 		if (samlConfiguration.publishMetadata)
 		{
 			Servlet metadataServlet = getMetadataServlet(samlPublicEntryPointUrl, sloAsyncURL, sloSyncURL);
@@ -294,7 +313,6 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 		}
 		return context;
 	}
-	
 	protected Servlet getSamlParseServlet(String endpointURL, String dispatcherUrl)
 	{
 		return new SamlParseServlet(myMetadataManager, 
@@ -369,4 +387,5 @@ public class SamlAuthVaadinEndpoint extends VaadinEndpoint
 				trustProvider, 
 				endpointDescription.getRealm().getName());
 	}
+
 }
